appId: com.pozitron.hepsiburada
---
- launchApp:
    clearState: true

# ==========================================
# 1. ARAMA VE LİSTELEME İŞLEMİ
# ==========================================

- tapOn:
    id: searchTextField

- inputText: "Adidas ayakkabi"

- pressKey: Enter

- extendedWaitUntil:
    visible: "Hızlı Teslimat"
    timeout: 15000

- assertVisible:
    id: addToCart
    index: 0

# Filtreleme öncesi toplam ürün sayısını hafızaya alma
- copyTextFrom:
    id: tvTitle
- evalScript: ${output.resultsBefore = maestro.copiedText.replace(/[^0-9]/g, "")}

- assertVisible:
    text: ".*[aA]didas.*"

# ==========================================
# 2. FİLTRELERİN UYGULANMASI
# ==========================================

- tapOn:
    point: 4%,11%

- tapOn: Beden

- tapOn: Ara

- inputText: "42"

- tapOn:
    text: "42"
    index: 1

- tapOn: Uygula

- tapOn: Fiyat Aralığı

- tapOn: En az

- inputText: "3000"

- tapOn: En çok

- inputText: "5000"

- hideKeyboard

- tapOn: Uygula

- tapOn: Renk

- tapOn: Beyaz

- tapOn: Uygula

- tapOn: Cinsiyet

- tapOn: Erkek

- tapOn: Uygula

- tapOn:
    id: btnApply # Tüm filtreleri ana listeye uygulanır.

- extendedWaitUntil:
    visible: ".*TL.*"
    timeout: 15000

# Filtrelerin çalıştığını doğrulamak için yeni sayıyı eski sayıyla kıyaslama
- copyTextFrom:
    id: tvTitle
- evalScript: ${output.resultsAfter = maestro.copiedText.replace(/[^0-9]/g, "")}

# Sonuç değişti mi? 
- assertTrue: ${output.resultsAfter != output.resultsBefore}

# ==========================================
# 3. SEÇİLİ FİLTRELERİN DOĞRULANMASI
# ==========================================
# Not: Yatay menüde ilgili filtreyi bulana kadar sağdan sola kaydırır (swipe)

- repeat:
    times: 4 # Maksimum kaydırma denemesi
    commands:
      # Eğer ekranda YOKSA kaydır, VARSA bu komutu atla
      - runFlow:
          when:
            notVisible: "Cinsiyet"
          commands:
            - swipe:
                start: "90%, 10%" 
                end: "25%, 10%"   
                duration: 1000

- assertVisible: Cinsiyet

- tapOn: Cinsiyet

- assertVisible:
    text: Erkek

- assertVisible:
    id: cbMultiSelection
    checked: true

- swipe:
    from:
      id: divider
    direction: DOWN

- swipe:
    start: "25%, 10%"
    end: "90%, 16%"
    duration: 5000

- repeat:
    times: 4
    commands:
      - runFlow:
          when:
            notVisible: "Fiyat Aralığı"
          commands:
            - swipe:
                start: "90%, 10%" 
                end: "25%, 10%"   
                duration: 1000

- assertVisible: Fiyat Aralığı

- tapOn: Fiyat Aralığı

- assertVisible: 3000 - 5000 TL

- assertVisible:
    id: rbSingleSelection
    checked: true

- swipe:
    from:
      id: divider
    direction: DOWN

- swipe:
    start: "25%, 10%"
    end: "90%, 16%"
    duration: 5000

- repeat:
    times: 4
    commands:
      - runFlow:
          when:
            notVisible: "Beden"
          commands:
            - swipe:
                start: "90%, 10%" 
                end: "25%, 10%"   
                duration: 1000

- assertVisible: Beden

- tapOn: Beden

- assertVisible: "42"

- assertVisible:
    id: cbMultiSelection
    checked: true

- swipe:
    from:
      id: divider
    direction: DOWN

- swipe:
    start: "25%, 10%"
    end: "90%, 16%"
    duration: 5000

- repeat:
    times: 4
    commands:
      - runFlow:
          when:
            notVisible: "Renk"
          commands:
            - swipe:
                start: "90%, 10%" 
                end: "25%, 10%"   
                duration: 1000

- assertVisible: Renk

- tapOn: Renk

- assertVisible: Beyaz

- assertVisible:
    id: cbMultiSelection
    checked: true

- swipe:
    from:
      id: divider
    direction: DOWN

# ==========================================
# 4. ÜRÜNÜ SEPETE EKLEME VE SEPET ONAYI
# ==========================================

- assertVisible:
    id: addToCart
    index: 0

- tapOn:
    point: "30%,38%" # İlk ürünün detayına gitmek için koordinata tıklar

- extendedWaitUntil:
    visible: "Sepete Ekle"
    timeout: 10000

- tapOn:
    id: pdpAddToCart

- extendedWaitUntil:
    visible: "Sepete git"
    timeout: 10000

- tapOn: Sepete git

- extendedWaitUntil:
    visible:
      id: basketPage_headerText
    timeout: 10000

# Sepet boşsa testi kasıtlı olarak patlatır (Fail)
- runFlow:
    when:
      visible: "Sepetin şu an boş"
    commands:
      - assertTrue: ${false}

- extendedWaitUntil:
    visible: "Ödemeye Geç"
    timeout: 10000

# Sepetteki ürünün detaylarının (Marka, Renk, Beden) doğrulanması

- assertVisible:
    id: productName

- assertVisible:
    id: productName
    text: ".*[aA]didas.*"

- assertVisible: ".*Beyaz.*"

- assertVisible: ".*42.*"
